crates/zenith/tests/snapshots/screens__apis_form__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
 5 APIs · manifest 2.0.0    │ solar.describe parameters
 › solar.describe   1.0.0   │
   solar.manifest   1.1.0   │ › api  string  required
   solar.ping       1.0.0   │     [ text_ ]
   solar.version    1.0.0   │     The method name to describe, for example
   system.info      1.1.0   │     `solar.ping`.
                            │      error  api is required.
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
 Enter run   Tab next field   Space toggle   Esc close
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 21-26  #FFC23D on #0B0C14 bold underlined
 0: 73-73  #FFC23D on #0B0C14 bold
 1: 30-43  #FFC23D on #0B0C14 bold
 2:  0-2   #FFC23D on #0B0C14 reversed
 2:  3-18  #FFC23D on #0B0C14 bold reversed
 2: 19-27  #F5F1E8 on #0B0C14 reversed
 3:  0-2   #FFC23D on #0B0C14
 3: 29-31  #FFC23D on #0B0C14
 3: 32-34  #FFC23D on #0B0C14 bold
 4:  0-2   #FFC23D on #0B0C14
 4: 29-39  #F5F1E8 on #0B0C14 reversed
 4: 40-40  #FFC23D on #0B0C14 reversed
 4: 41-42  #F5F1E8 on #0B0C14 reversed
 5:  0-2   #FFC23D on #0B0C14
 6:  0-2   #FFC23D on #0B0C14
 7: 34-40  #FFC23D on #0B0C14 bold reversed
22:  1-5   #FFC23D on #0B0C14 bold
22: 13-15  #FFC23D on #0B0C14 bold
22: 30-34  #FFC23D on #0B0C14 bold
22: 45-47  #FFC23D on #0B0C14 bold
23:  3-3   #FFC23D on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
