crates/zenith/tests/snapshots/screens__apis_form__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
 5 APIs · manifest 2.0.0    │ solar.describe parameters
 › solar.describe   1.0.0   │
   solar.manifest   1.1.0   │ › api  string  required
   solar.ping       1.0.0   │     [ text_ ]
   solar.version    1.0.0   │     The method name to describe, for example
   system.info      1.1.0   │     `solar.ping`.
                            │      error  api is required.
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
 Enter run   Tab next field   Space toggle   Esc close
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #555355 on #F5F1E8
 0: 21-26  #8C4907 on #F5F1E8 bold underlined
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  0-23  #555355 on #F5F1E8
 1: 28-28  #868482 on #F5F1E8
 1: 30-43  #8C4907 on #F5F1E8 bold
 1: 44-54  #555355 on #F5F1E8
 2:  0-2   #8C4907 on #F5F1E8
 2:  3-18  #8C4907 on #F5F1E8 bold
 2: 19-27  #555355 on #F5F1E8
 2: 28-28  #868482 on #F5F1E8
 3:  0-2   #8C4907 on #F5F1E8
 3: 19-27  #555355 on #F5F1E8
 3: 28-28  #868482 on #F5F1E8
 3: 29-31  #8C4907 on #F5F1E8
 3: 32-34  #8C4907 on #F5F1E8 bold
 3: 43-52  #555355 on #F5F1E8
 4:  0-2   #8C4907 on #F5F1E8
 4: 19-27  #555355 on #F5F1E8
 4: 28-28  #868482 on #F5F1E8
 4: 29-33  #17161C on #DAD7D0
 4: 34-39  #868482 on #F5F1E8
 4: 40-40  #8C4907 on #F5F1E8
 4: 41-42  #868482 on #F5F1E8
 5:  0-2   #8C4907 on #F5F1E8
 5: 19-27  #555355 on #F5F1E8
 5: 28-28  #868482 on #F5F1E8
 5: 34-73  #555355 on #F5F1E8
 6:  0-2   #8C4907 on #F5F1E8
 6: 19-27  #555355 on #F5F1E8
 6: 28-28  #868482 on #F5F1E8
 6: 34-46  #555355 on #F5F1E8
 7: 28-28  #868482 on #F5F1E8
 7: 34-40  #8C4907 on #F5F1E8 bold reversed
 8: 28-28  #868482 on #F5F1E8
 9: 28-28  #868482 on #F5F1E8
10: 28-28  #868482 on #F5F1E8
11: 28-28  #868482 on #F5F1E8
12: 28-28  #868482 on #F5F1E8
13: 28-28  #868482 on #F5F1E8
14: 28-28  #868482 on #F5F1E8
15: 28-28  #868482 on #F5F1E8
16: 28-28  #868482 on #F5F1E8
17: 28-28  #868482 on #F5F1E8
18: 28-28  #868482 on #F5F1E8
19: 28-28  #868482 on #F5F1E8
20: 28-28  #868482 on #F5F1E8
21: 28-28  #868482 on #F5F1E8
22:  1-5   #8C4907 on #F5F1E8 bold
22:  6-12  #555355 on #F5F1E8
22: 13-15  #8C4907 on #F5F1E8 bold
22: 16-29  #555355 on #F5F1E8
22: 30-34  #8C4907 on #F5F1E8 bold
22: 35-44  #555355 on #F5F1E8
22: 45-47  #8C4907 on #F5F1E8 bold
22: 48-56  #555355 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 67-79  #868482 on #F5F1E8
