crates/zenith/tests/snapshots/screens__apis_form__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
 5 APIs · manifest 2.0.0    │ solar.describe parameters
 › solar.describe   1.0.0   │
   solar.manifest   1.1.0   │ › api  string  required
   solar.ping       1.0.0   │     [ text_ ]
   solar.version    1.0.0   │     The method name to describe, for example
   system.info      1.1.0   │     `solar.ping`.
                            │      error  api is required.
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
                            │
 Enter run   Tab next field   Space toggle   Esc close
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 1.84 ms ─── in orbit 42s ───────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #9C9A97 on #0B0C14
 0: 21-26  #FFC23D on #0B0C14 bold underlined
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-72  #646365 on #0B0C14
 0: 73-73  #FFC23D on #0B0C14 bold
 0: 74-79  #9C9A97 on #0B0C14
 1:  0-23  #9C9A97 on #0B0C14
 1: 28-28  #646365 on #0B0C14
 1: 30-43  #FFC23D on #0B0C14 bold
 1: 44-54  #9C9A97 on #0B0C14
 2:  0-2   #FFC23D on #0B0C14
 2:  3-18  #FFC23D on #0B0C14 bold
 2: 19-27  #9C9A97 on #0B0C14
 2: 28-28  #646365 on #0B0C14
 3:  0-2   #FFC23D on #0B0C14
 3: 19-27  #9C9A97 on #0B0C14
 3: 28-28  #646365 on #0B0C14
 3: 29-31  #FFC23D on #0B0C14
 3: 32-34  #FFC23D on #0B0C14 bold
 3: 43-52  #9C9A97 on #0B0C14
 4:  0-2   #FFC23D on #0B0C14
 4: 19-27  #9C9A97 on #0B0C14
 4: 28-28  #646365 on #0B0C14
 4: 29-33  #F5F1E8 on #2C2C32
 4: 34-39  #646365 on #0B0C14
 4: 40-40  #FFC23D on #0B0C14
 4: 41-42  #646365 on #0B0C14
 5:  0-2   #FFC23D on #0B0C14
 5: 19-27  #9C9A97 on #0B0C14
 5: 28-28  #646365 on #0B0C14
 5: 34-73  #9C9A97 on #0B0C14
 6:  0-2   #FFC23D on #0B0C14
 6: 19-27  #9C9A97 on #0B0C14
 6: 28-28  #646365 on #0B0C14
 6: 34-46  #9C9A97 on #0B0C14
 7: 28-28  #646365 on #0B0C14
 7: 34-40  #D98E1F on #0B0C14 bold reversed
 8: 28-28  #646365 on #0B0C14
 9: 28-28  #646365 on #0B0C14
10: 28-28  #646365 on #0B0C14
11: 28-28  #646365 on #0B0C14
12: 28-28  #646365 on #0B0C14
13: 28-28  #646365 on #0B0C14
14: 28-28  #646365 on #0B0C14
15: 28-28  #646365 on #0B0C14
16: 28-28  #646365 on #0B0C14
17: 28-28  #646365 on #0B0C14
18: 28-28  #646365 on #0B0C14
19: 28-28  #646365 on #0B0C14
20: 28-28  #646365 on #0B0C14
21: 28-28  #646365 on #0B0C14
22:  1-5   #FFC23D on #0B0C14 bold
22:  6-12  #9C9A97 on #0B0C14
22: 13-15  #FFC23D on #0B0C14 bold
22: 16-29  #9C9A97 on #0B0C14
22: 30-34  #FFC23D on #0B0C14 bold
22: 35-44  #9C9A97 on #0B0C14
22: 45-47  #FFC23D on #0B0C14 bold
22: 48-56  #9C9A97 on #0B0C14
23:  0-2   #646365 on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  4-6   #646365 on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
23: 18-20  #9C9A97 on #0B0C14
23: 28-32  #646365 on #0B0C14
23: 33-42  #9C9A97 on #0B0C14
23: 50-54  #646365 on #0B0C14
23: 55-63  #9C9A97 on #0B0C14
23: 67-79  #646365 on #0B0C14
