crates/zenith/tests/snapshots/screens__apis_form__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
 5 APIs - manifest 2.0.0    | solar.describe parameters
 > solar.describe   1.0.0   |
   solar.manifest   1.1.0   | > api  string  required
   solar.ping       1.0.0   |     [ text_ ]
   solar.version    1.0.0   |     The method name to describe, for example
   system.info      1.1.0   |     `solar.ping`.
                            |      error  api is required.
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
                            |
 Enter run   Tab next field   Space toggle   Esc close
 --*-- SOLAR 0.1.0 - solar/1 --- last call 1.84 ms --- in orbit 42s -----------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 21-26  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 1: 28-28  - on - dim
 1: 30-43  - on - bold
 2:  0-18  - on - bold reversed
 2: 19-27  - on - reversed
 2: 28-28  - on - dim
 3:  0-2   - on - bold
 3: 28-28  - on - dim
 3: 29-34  - on - bold
 4:  0-2   - on - bold
 4: 28-28  - on - dim
 4: 29-33  - on - reversed
 4: 34-39  - on - dim reversed
 4: 40-40  - on - bold reversed
 4: 41-42  - on - dim reversed
 5:  0-2   - on - bold
 5: 28-28  - on - dim
 6:  0-2   - on - bold
 6: 28-28  - on - dim
 7: 28-28  - on - dim
 7: 34-40  - on - bold reversed
 8: 28-28  - on - dim
 9: 28-28  - on - dim
10: 28-28  - on - dim
11: 28-28  - on - dim
12: 28-28  - on - dim
13: 28-28  - on - dim
14: 28-28  - on - dim
15: 28-28  - on - dim
16: 28-28  - on - dim
17: 28-28  - on - dim
18: 28-28  - on - dim
19: 28-28  - on - dim
20: 28-28  - on - dim
21: 28-28  - on - dim
22:  1-5   - on - bold
22: 13-15  - on - bold
22: 30-34  - on - bold
22: 45-47  - on - bold
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 67-79  - on - dim
